# v2pi

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yml
backend/: pyproject.toml
backend/pi_gw_panel/: __init__.py  __main__.py  app.py  config.py  controller.py  db.py  logs.py  models.py  state.py
backend/pi_gw_panel/api/: deps.py  routes.py  schemas.py
backend/pi_gw_panel/auth/: auth.py  service.py  tokens.py
backend/pi_gw_panel/backup/: __init__.py  scheduler.py
backend/pi_gw_panel/health/: failover.py  geo.py  liveness.py  monitor.py  probe.py  selection.py  snapshot.py
backend/pi_gw_panel/net_control/: dnsmasq_supervisor.py  dryrun.py  (+8 more)
backend/tests/: conftest.py  test_api.py  test_api_subs.py  test_api_wave2.py  test_api_wave3a.py  test_api_wave3b.py  test_api_xray_disconnect.py  test_audit_fixes.py  test_auth.py  test_auth_service.py  test_backup.py  test_backup_scheduler.py  test_boot_reapply.py  test_builder.py  test_builder_stats.py  test_connection_audit.py  test_controller.py  test_dashboard_audit.py  test_dashboard_audit2.py  test_dashboard_backend.py  test_dhcp_leases_config.py  test_dnsmasq_supervisor.py  test_dryrun.py  test_entrypoint.py  test_failover.py  test_full_project_audit.py  test_geo.py  test_health.py  test_health_monitor.py  test_health_probe.py  test_integration_backup.py  test_integration_failover.py  test_integration_subs.py  test_ipv6.py  test_linux.py  test_logs.py  test_migrate_host_script.py  test_migration2.py  test_migrations.py  test_net_render.py  (+37 more)
(+87 files in other folders)
