[project]
name = "pi-gw-panel"
version = "1.10.1.1"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "itsdangerous>=2.2",
    "pyyaml>=6.0",
    "grpcio>=1.81.0",
    "protobuf>=6.30,<7",   # runtime for the generated stats stubs (google.protobuf); dev pulled it transitively
    "maxminddb>=3,<4",     # read the bundled DB-IP country mmdb for the egress flag (prebuilt aarch64 wheel)
]

[dependency-groups]
# `httpx2` is the HTTP client for Starlette's TestClient (tests only). Starlette
# 1.2.1's TestClient wants the httpx2/httpcore2 line, not plain `httpx` — keep it
# as `httpx2`. Dev-only, never shipped. Don't "simplify" this to `httpx`.
dev = [
    "pytest>=8.2",
    "httpx2",
    "grpcio-tools>=1.81.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pi_gw_panel"]

[tool.pytest.ini_options]
pythonpath = ["."]
